# ideameer_agents

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: search_agent.py
core/: dependencies.py  gemini.py  logger.py
prompts/: idea.py  idea_search.py  plan.py
routers/: idea_router.py  project_router.py
services/: idea_service.py  project_service.py
