[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "baidusearch>=1.0.3",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.37.38",
    "browser-use>=0.1.41",
    "browsergym>=0.13.3",
    "colorama>=0.4.6",
    "datasets>=3.5.0",
    "docker>=7.1.0",
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "firecrawl-py>=2.5.4",
    "google-genai>=1.11.0",
    "googlesearch-python>=1.3.0",
    "gymnasium>=1.1.1",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "huggingface-hub>=0.30.2",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-teddynote>=0.3.45",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "pillow>=11.2.1",
    "playwright>=1.51.0",
    "pydantic-core>=2.27.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=79.0.0",
    "supabase>=2.15.0",
    "tiktoken>=0.9.0",
    "tomli>=2.2.1",
    "unidiff>=0.7.5",
    "uvicorn>=0.34.2",
]
